--- a/force-app/main/default/lwc/surveyJsEventDebugger/surveyJsEventDebugger.html
+++ b/force-app/main/default/lwc/surveyJsEventDebugger/surveyJsEventDebugger.html
@@ -13,6 +13,9 @@
                     </h2>
                 </div>
                 <div class="slds-no-flex">
+                    <lightning-button-icon icon-name="utility:new_window" alternative-text="Pop Out" title="Pop Out"
+                        onclick={handlePopOut} class="slds-m-right_x-small">
+                    </lightning-button-icon>
                     <lightning-button-icon icon-name={expandIcon} alternative-text={expandLabel} title={expandLabel}
                         onclick={handleToggleExpand}>
                     </lightning-button-icon>
@@ -108,11 +111,25 @@
                                     <div class="slds-grid slds-grid_vertical-align-start slds-p-top_xx-small">
                                         <div class="slds-col slds-size_1-of-2 slds-p-right_xx-small">
                                             <div class="slds-text-title">Sender</div>
-                                            <pre class="json-content">{log.sender}</pre>
+                                            <div class="json-content-container">
+                                                <lightning-button-icon icon-name="utility:copy_to_clipboard"
+                                                    alternative-text="Copy to clipboard" title="Copy to clipboard"
+                                                    data-content={log.sender} onclick={handleCopyToClipboard}
+                                                    class="copy-button">
+                                                </lightning-button-icon>
+                                                <pre class="json-content">{log.sender}</pre>
+                                            </div>
                                         </div>
                                         <div class="slds-col slds-size_1-of-2 slds-p-left_xx-small">
                                             <div class="slds-text-title">Options</div>
-                                            <pre class="json-content">{log.options}</pre>
+                                            <div class="json-content-container">
+                                                <lightning-button-icon icon-name="utility:copy_to_clipboard"
+                                                    alternative-text="Copy to clipboard" title="Copy to clipboard"
+                                                    data-content={log.options} onclick={handleCopyToClipboard}
+                                                    class="copy-button">
+                                                </lightning-button-icon>
+                                                <pre class="json-content">{log.options}</pre>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
