--- a/force-app/main/default/lwc/surveyBuilder/surveyBuilder.html
+++ b/force-app/main/default/lwc/surveyBuilder/surveyBuilder.html
@@ -1,13 +1,10 @@
 <template>
-    <div if:false={notFound}><!-- class="slds-builder-header_container"-->
+    <div if:false={notFound}>
         <header class="slds-builder-header">
             <div class="slds-builder-header__item">
                 <div class="slds-builder-header__item-label slds-media slds-media_center">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-builder slds-current-color">
-                            <!-- <svg class="slds-icon slds-icon_x-small" aria-hidden="true">
-                                <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#builder"></use>
-                            </svg> -->
                             <lightning-icon icon-name="standard:survey" alternative-text="Survey" size="small"
                                 title={surveyJson.title}></lightning-icon>
                         </span>
@@ -15,92 +12,17 @@
                     <div class="slds-media__body">{surveyJson.title}</div>
                 </div>
             </div>
-            <nav if:true={surveyVersionRec} class="slds-builder-header__item slds-builder-header__nav">
-                <ul class="slds-builder-header__nav-list">
-                    <li
-                        class="slds-builder-header__nav-item slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open">
-                        <button class="slds-button slds-builder-header__item-action slds-media slds-media_center"
-                            aria-haspopup="true" aria-expanded="false" title="Click to open menu">
-                            <span class="slds-media__figure">
-                                <span class="slds-icon_container slds-icon-utility-page slds-current-color">
-                                    <!-- <svg class="slds-icon slds-icon_x-small" aria-hidden="true">
-                                        <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#page"></use>
-                                    </svg> -->
-                                    <lightning-icon icon-name="utility:page" alternative-text="Survey" size="xx-small"
-                                        title={surveyJson.title}></lightning-icon>
-                                </span>
-                            </span>
-                            <span class="slds-media__body">
-                                <span class="slds-truncate" title="Version">
-                                    <template if:true={surveyVersionRec}>Version -
-                                        {surveyVersionRec.VersionNumber__c}</template>
-                                </span>
-                                <span
-                                    class="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small">
-                                    <lightning-icon icon-name="utility:chevrondown" alternative-text="Down"
-                                        size="x-small" title='Down' onclick={clickDropDown}></lightning-icon>
-                                    <!-- <svg class="slds-icon slds-icon_x-small" aria-hidden="true">
-                                        <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown">
-                                        </use>
-                                    </svg> -->
-                                </span>
-                            </span>
-                        </button>
-                        <div if:true={showDropDown} class="slds-dropdown slds-dropdown_right slds-dropdown_actions">
-                            <ul class="slds-dropdown__list" role="menu" aria-label="Show More">
-                                <!-- <li class="slds-dropdown__header slds-truncate" role="presentation" tabindex="0">Menu Header</li> -->
-                                <template for:each={surveyVersionList} for:item='surveyVersion'>
-                                    <li key={surveyVersion.VersionNumber__c} class="slds-dropdown__item"
-                                        role="presentation">
-                                        <a onclick={openVersion} role="menuitem" tabindex="-1"
-                                            data-surveyid={surveyVersion.Id}>
-                                            <span class="slds-truncate" title={surveyVersion.VersionNumber__c}>Version -
-                                                {surveyVersion.VersionNumber__c}</span>
-                                        </a>
-                                    </li>
-                                </template>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-            <div if:true={surveyVersionRec} class="slds-builder-header__item slds-builder-header__utilities">
-                <div if:false={showActivate} class="slds-builder-header__utilities-item">
-                    <a onclick={copySurveyLink} class="slds-builder-header__item-action slds-media slds-media_center">
-                        <div class="slds-media__figure">
-                            <span class="slds-icon_container slds-icon-utility-help slds-current-color">
-                                <!-- <svg class="slds-icon slds-icon_x-small" aria-hidden="true">
-                          <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#help"></use>
-                        </svg> -->
-                                <lightning-icon icon-name="utility:copy" alternative-text="Copy" size="xx-small"
-                                    title='copy'></lightning-icon>
-                            </span>
-                        </div>
-                        <div class="slds-media__body">Copy Survey Link</div>
-                    </a>
-                </div>
-            </div>
         </header>
         <div class="slds-builder-toolbar" role="toolbar">
-            <div if:true={surveyVersionRec} class="slds-builder-toolbar__item-group" aria-label="Canvas Actions">
-                <span if:true={showActivate} class="slds-badge slds-theme_warning">Draft</span>
-                <span if:false={showActivate} class="slds-badge slds-theme_success">Active</span>
-            </div>
-            <div if:true={loaded} class="slds-builder-toolbar__actions" aria-label="Document actions">
-                <lightning-button if:true={showActivate} disabled={changesUnSaved} label='Activate' title='Activate'
-                    onclick={handleActivate} class="slds-m-left_x-small"></lightning-button>
-                <lightning-button disabled={disableSave} variant="brand" label="Save" title="Save" onclick={handleSave}
-                    class="slds-m-left_x-small"></lightning-button>
-                <lightning-button if:true={surveyVersionRec} disabled={disableSave} variant="brand"
-                    label="Save As New Version" title="Save As New Version" onclick={handleSave}
-                    class="slds-m-left_x-small" data-version="new"></lightning-button>
+            <div if:false={isLoading} class="slds-builder-toolbar__actions" aria-label="Document actions">
+                <lightning-button disabled={isSaveDisabled} variant="brand" label="Save" title="Save"
+                    onclick={handleSave} class="slds-m-left_x-small"></lightning-button>
             </div>
         </div>
     </div>
     <div if:false={notFound}>
-        <!-- class="slds-m-bottom_xx-small slds-m-top_small"  -->
-        <lightning-spinner if:false={loaded} alternative-text="Loading"></lightning-spinner>
-        <c-survey-js-event-debugger></c-survey-js-event-debugger>
+        <lightning-spinner if:true={isLoading} alternative-text="Loading"></lightning-spinner>
+        <c-survey-js-event-debugger creator-instance={creator}></c-survey-js-event-debugger>
         <div class="surveyContainer" lwc:dom="manual"></div>
     </div>
     <div if:true={notFound}
